# vds

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.inc  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.bat  build.sh  build_android.bat  build_android.sh  build_dep.bat  build_dep.sh  keys  readme.txt  rebuild.sh  root_user  run_tests.bat  setenv.bat  start.sh  test.html  test.txt  test_init_root_server.bat  test_init_root_server.sh  test_init_server.bat  test_run_root_server.bat  test_run_root_server.sh  test_run_second_server.sh  test_run_server.bat  test_run_servers.bat  test_run_servers.sh  test_run_web_server.bat  test_run_web_servers.bat  test_start_first_server.bat  test_start_first_web_server.bat  test_start_four_web_server.bat  test_start_second_web_server.bat  test_start_web_server.bat  test_start_zero_web_server.bat  (+5 more)
app/: CMakeLists.txt
app/test/: test_async.cpp
app/vds.embedded.net/: VdsApi.cs  vds.embedded.net.csproj
app/vds.net/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  vds.net.csproj
app/vds_admin_win/: AdminChannelPage.cpp  AdminChannelPage.h  MainWizard.cpp  MainWizard.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h  vds_admin_win.cpp  vds_admin_win.h  vds_admin_win.rc  vds_admin_win.vcxproj  vds_admin_winDlg.cpp  vds_admin_winDlg.h
app/vds_android/: vds_android.csproj
app/vds_background/: CMakeLists.txt  background.cpp  background_app.cpp  background_app.h  stdafx.h  vds_background.cpp  vds_background_app.cpp  vds_background_app.h  vds_cmd_app.cpp
app/vds_cmd/: CMakeLists.txt  stdafx.h  vds_cmd.cpp  vds_cmd_app.cpp  vds_cmd_app.h
app/vds_embedded/: CMakeLists.txt  stdafx.h  vds_api.cpp  vds_api.h  vds_embedded.cpp  vds_embedded.h
app/vds_embedded.net/: vds_api.cs
app/vds_get_root/: CMakeLists.txt  get_root_app.cpp  get_root_app.h  stdafx.h  vds_get_root.cpp  vds_get_root.h
app/vds_linux/: CMakeLists.txt  main.cpp
app/vds_node/: CMakeLists.txt  node.cpp  node_app.cpp  node_app.h  stdafx.cpp  stdafx.h  vds_node.cpp  vds_node_app.cpp  vds_node_app.h
app/vds_sync_app/: CMakeLists.txt  sync_app.cpp  sync_app.h  vds_sync_app.pro
app/vds_sync_app_linux/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  TrayIcon.cpp  TrayIcon.h  vds_sync_app_linux.cpp.cpp
app/vds_updater/: CMakeLists.txt  stdafx.h  vds_updater_app.cpp  vds_updater_app.h
app/vds_web_server/: CMakeLists.txt  api_controller.cpp  auth_session.cpp  file_upload_task.cpp  index_page.cpp  login_page.cpp  login_page.h  register_page.cpp  register_page.h  stdafx.h  storage_api.cpp  storage_api.h  web_server.cpp  web_server.h  web_server_app.cpp  web_server_app.h  web_server_main.cpp
app/vds_wf_client/: LoginForm.Designer.cs  LoginForm.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  StorageForm.Designer.cs  StorageForm.cs  StorageForm.resx  Utils.cs  vds_api.cs  vds_wf_client.csproj
app/vds_windows/: CMakeLists.txt  InfoDlg.cpp  InfoDlg.h  InitSettingsDlg.cpp  InitSettingsDlg.h  LoginDlg.cpp  LoginDlg.h  SettingsDlg.cpp  SettingsDlg.h  StringUtils.cpp  StringUtils.h  TrayIcon.cpp  TrayIcon.h  VdsApi.cpp  VdsApi.h  resource.h  stdafx.h  vds_windows.cpp  vds_windows.rc  vds_windows.vcxproj
app/vds_ws_server/: CMakeLists.txt  stdafx.h  ws_server_app.cpp  ws_server_app.h  ws_server_main.cpp
kernel/vds_core/: CMakeLists.txt  app.cpp  app.h  async_buffer.h  async_loop.h  async_mutex.h  async_stream.h  async_task.cpp  async_task.h  barrier.cpp  barrier.h  binary_serialize.cpp  binary_serialize.h  cancellation_token.cpp  cancellation_token.h  cancellation_token_p.h  circular_buffer.h  command_line.cpp  command_line.h  const_data_buffer.cpp  const_data_buffer.h  data_buffer.cpp  data_buffer.h  data_pipeline.cpp  data_pipeline.h  dataflow.h  debug.cpp  debug.h  debug_mutex.h  deferred_callback.cpp  deferred_callback.h  encoding.cpp  encoding.h  events.h  expected.h  file.cpp  file.h  filename.cpp  filename.h  foldername.cpp  (+54 more)
kernel/vds_crypto/: CMakeLists.txt  asymmetriccrypto.cpp  asymmetriccrypto.h  asymmetriccrypto_p.h  crypto_exception.cpp  crypto_exception.h  crypto_service.cpp  crypto_service.h  hash.cpp  hash.h  hash_p.h  keys_control.cpp  keys_control.h  ssl_peer.cpp  ssl_peer.h  ssl_tunnel.cpp  ssl_tunnel.h  ssl_tunnel_p.h  stdafx.h  symmetriccrypto.cpp  symmetriccrypto.h  symmetriccrypto_p.h  vds_crypto.cpp  vds_crypto.h
kernel/vds_data/: CMakeLists.txt  chunk.h  chunk_file.cpp  chunk_file.h  chunk_file_p.h  chunk_generate.h  chunk_storage.cpp  chunk_storage.h  chunk_storage_p.h  compressed_archive.cpp  compressed_archive.h  compressed_archive_p.h  data_restore.h  deflate.cpp  deflate.h  deflate_p.h  file_container.cpp  file_container.h  gf.h  inflate.cpp  inflate.h  inflate_p.h  object_container.cpp  object_container.h  stdafx.h  vds_data.h
kernel/vds_database/: CMakeLists.txt  database.cpp  database.h  database_orm.cpp  database_orm.h  database_p.h  stdafx.h  vds_database.h
kernel/vds_dht/: CMakeLists.txt  dht_object_id.h  dht_route.h  stdafx.h
kernel/vds_http/: CMakeLists.txt  http_client.cpp  http_client.h  http_context.cpp  http_context.h  http_form_parser.cpp  http_form_parser.h  http_form_part_parser.cpp  http_form_part_parser.h  http_incoming_stream.h  http_json_api.cpp  http_json_api.h  http_json_formatter.cpp  http_json_formatter.h  http_message.cpp  http_message.h  http_middleware.h  http_mimetype.cpp  http_mimetype.h  http_multipart_reader.cpp  http_multipart_reader.h  http_multipart_request.cpp  http_multipart_request.h  http_outgoing_stream.cpp  http_outgoing_stream.h  http_parser.cpp  http_parser.h  http_pipeline.cpp  http_pipeline.h  http_request.cpp  http_request.h  http_request_serializer.h  http_response.cpp  http_response.h  http_response_parser.cpp  http_response_parser.h  http_response_serializer.h  http_router.cpp  http_router.h  http_send_request.h  (+19 more)
kernel/vds_network/: CMakeLists.txt  ReadMe.txt  accept_socket_task.cpp  accept_socket_task.h  dns.cpp  dns.h  dns_p.h  input_network_stream.h  network_address.cpp  network_address.h  network_manager.cpp  network_manager.h  (+43 more)
tests/: CMakeLists.txt
(+1346 files in other folders)
