PROJECT(vds_linux CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

ADD_EXECUTABLE(vds_linux main.cpp)

TARGET_LINK_LIBRARIES(vds_linux ${GTK3_LIBRARIES})